--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,21 @@
 version: '3.3'
 services:
-  postgres:
-    image: postgres:10
+  db:
+    image: postgres:latest
     container_name: postgres
     environment:
       - POSTGRES_DB=fastfood-db
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=password
-      - TZ=GMT
+    volumes:
+      - pgdata:/var/lib/postgresql/data
     ports:
-      - 5432:5432
+      - '5432:5432'
+    networks:
+      - my-network
+volumes:
+  pgdata:
+networks:
+  my-network:
+
+
